# syncopy

./: .gitmodules  CMakeLists.txt  README.md  my.py  receiver.py  send.py  server.py1111  synco.py
core/: __init__.py  file.py  logger.py  multicaster.py  node.py  server_services.py
syncopy/: CMakeLists.txt  checksum.h  file.cpp  file.h  signature.h
tests/: CMakeLists.txt  checksum_test.cpp  file_test.cpp
